tests/baselines/reference/moduleAndInterfaceSharingName3.errors.txt
moduleAndInterfaceSharingName3.ts(7,5): error TS2322: Type 'null' is not assignable to type 'Z'.


==== moduleAndInterfaceSharingName3.ts (1 errors) ====
    namespace X {
        export namespace Y {
            export interface Z { }
        }
        export interface Y<T> { }
    }
    var z: X.Y.Z = null;
        ~
!!! error TS2322: Type 'null' is not assignable to type 'Z'.
    var z2: X.Y<string>;